force-app/main/default/objects/OperatingHours/fields/FSM_OperatingHoursNameChange__c.field-meta.xml
<CustomField>
    <fullName>FSM_OperatingHoursNameChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-7117</description>
    <label>Operating Hours Name Change</label>
    <type>Checkbox</type>
</CustomField>