force-app/main/default/objects/OperatingHours/fields/FSM_SlotType__c.field-meta.xml
<CustomField>
    <fullName>FSM_SlotType__c</fullName>
    <label>Slot Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>CSAP</fullName>
            </value>
            <value>
                <fullName>2HRS</fullName>
            </value>
            <value>
                <fullName>AMPM</fullName>
            </value>
            <value>
                <fullName>MAPM</fullName>
            </value>
            <value>
                <fullName>M2HR</fullName>
            </value>
            <value>
                <fullName>2 hour</fullName>
                <isActive>false</isActive>
                <label>2 hour</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <isActive>false</isActive>
                <label>AM</label>
            </value>
            <value>
                <fullName>EVE</fullName>
                <isActive>false</isActive>
                <label>EVE</label>
            </value>
            <value>
                <fullName>PM</fullName>
                <isActive>false</isActive>
                <label>PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>