force-app/main/default/objects/OperatingHours/fields/FSM_TMAOperatingHours__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAOperatingHours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-7117</description>
    <label>TMA Operating Hours</label>
    <type>Checkbox</type>
</CustomField>