force-app/main/default/objects/OperatingHours/listViews/All_OperatingHours.listView-meta.xml
<ListView>
    <fullName>All_OperatingHours</fullName>
    <columns>Name</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>FSM_SlotType__c</columns>
    <columns>TimeZone</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Operating Hours</label>
</ListView>